Sun Nov  9 06:10:59 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (set-batch-mode?!, batch-mode?): initialize more
	usefully so they will work from a script.

1997-10-31  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (inherit-print-state): Moved definition to the
	neighborhood of the record code.

Mon Oct 27 02:05:49 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* boot-9.scm: Revert changes to this file from Oct 23.  It turns
 	out to interact badly with the Emacs support and the Tcl/Tk
 	support.  It's not a high enough priority at the moment to be
 	worth fixing.  I'm leaving the other readline support in, though.

Sat Oct 25 14:23:22 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* Makefile.am: Include readline.scm in the list of files to be
	installed, so Guile can find it for interactive use.
	* Makefile.in: Regenerated.

Thu Oct 23 01:00:33 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	Add support for readline function.
	* readline.scm: New module.
	* boot-9.scm (repl-reader): New function.
	(scm-style-repl): Call repl-reader, instead of doing the reading
	ourselves.  Remove repl-report-reset; it was never used for
	anything.
	(top-repl): If we've got the readline primitives, then redefine
	repl-reader to use them.
	If we've got the readline primitives, import the readline module.

	* ls.scm (ls, lls): Don't assume (eq? #f '()).

Wed Oct 22 18:26:57 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* calling.scm, common-list.scm, ls.scm, q.scm, runq.scm,
	string-fun.scm: Added copyright notices; reformatted.

Thu Oct  9 05:44:00 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* expect.scm: (expect-regexec): new procedure, use it in
	expect-strings to fix the => syntax under the new regex system.
	(top): include regex module in define-module statement.

Wed Oct  8 03:16:01 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* (error-catching-loop): new local variable "interactive".  if
	#f, abort terminates the process.